# SpacedRepetitionBot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  locustfile.py  pyproject.toml  temp.txt
.github/workflows/: ci.yml  deploy.yml
docs/: technical_specification.md
scripts/: check_complexity.py  deploy.sh  start_api.sh  start_bot.sh  status_services.sh  stop_services.sh
src/spaced_repetition_bot/: __init__.py  bootstrap.py  main.py  run_telegram_bot.py
src/spaced_repetition_bot/application/: __init__.py  _use_cases_core.py  _use_cases_quiz.py  dto_history.py  dto_progress.py  dto_reviews.py  dto_settings.py  dto_translation.py  dtos.py  errors.py  history_use_case.py  ports.py  progress_use_case.py  review_use_cases.py  settings_use_case.py  toggle_learning_command.py  toggle_learning_use_case.py  translation_use_case.py  use_case_common.py  use_cases.py
src/spaced_repetition_bot/domain/: __init__.py  answer_policy.py  enums.py  models.py  phrase_card_model.py  policies.py  review_track_model.py  spaced_repetition_policy.py  telegram_quiz_session_model.py  user_settings_model.py
src/spaced_repetition_bot/infrastructure/: _repositories_memory.py  _repositories_sqlalchemy.py  clock.py  config.py  database.py  reminders.py  repositories.py  translators.py
src/spaced_repetition_bot/presentation/: __init__.py  _telegram_flow.py  _telegram_router.py  _telegram_ui.py  api.py  api_due_reviews.py  api_errors.py  api_health.py  api_history.py  api_history_models.py  api_learning.py  api_learning_models.py  api_progress.py  api_progress_models.py  api_review_models.py  api_settings.py  api_settings_models.py  api_submit_review.py  api_translation_models.py  api_translations.py  telegram.py
tests/: conftest.py  support.py  test_api.py  test_ci_gate.py  test_domain_models.py  test_reminders.py  test_runtime_wiring.py  test_telegram.py  test_translators.py  test_use_cases.py
tests/application/: test_use_cases.py
tests/domain/: test_models_and_policies.py
tests/infrastructure/: test_database_and_repositories.py  test_reminders.py  test_translators.py
tests/non_functional/: test_locust_smoke.py
tests/presentation/: test_api.py  test_telegram.py
tests/runtime/: test_runtime.py
tests/support/: __init__.py  builders.py  telegram.py
